--- a/Markom.DataAccess/Markom.DataAccess.csproj
+++ b/Markom.DataAccess/Markom.DataAccess.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleRepo.cs" />
+    <Compile Include="UnitRepo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Markom.DataModel\Markom.DataModel.csproj">
