--- a/Markom.ViewModel/Markom.ViewModel.csproj
+++ b/Markom.ViewModel/Markom.ViewModel.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResponseResult.cs" />
     <Compile Include="RoleViewModel.cs" />
+    <Compile Include="UnitViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
