--- a/Markom.DataAccess/Markom.DataAccess.csproj
+++ b/Markom.DataAccess/Markom.DataAccess.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="ProductRepo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleRepo.cs" />
     <Compile Include="UnitRepo.cs" />
