--- a/Markom.ViewModel/Markom.ViewModel.csproj
+++ b/Markom.ViewModel/Markom.ViewModel.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="ProductViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResponseResult.cs" />
     <Compile Include="RoleViewModel.cs" />
